--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,11 @@ face-recognition==1.3.0
 face_recognition_models==0.3.0
 flatbuffers==24.3.25
 fonttools==4.54.1
+flask==2.2.2
+flask-cors==2.1.2
+flask-restful==0.3.9
+flask-login==0.6.2
+flask-wtf==1.0.1
 ipykernel==6.29.5
 ipython==8.29.0
 ipywidgets==8.1.5
@@ -28,7 +33,6 @@ jupyterlab_widgets==3.0.13
 kiwisolver==1.4.7
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
-mediapipe==0.10.15
 ml_dtypes==0.5.0
 nest-asyncio==1.6.0
 numpy==1.26.4
