--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "@emotion/is-prop-valid": "^1.3.1",
+    "@shadcn/ui": "^0.0.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.18.0",
-    "lucide-react": "^0.471.1",
+    "lucide-react": "^0.471.2",
     "motion-dom": "^11.16.4",
     "motion-utils": "^11.16.0",
     "react": "^18.3.1",
@@ -20,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-webcam": "^7.2.0",
     "shebang-regex": "^4.0.0",
+    "tailwind-merge": "^3.0.2",
     "tslib": "^2.8.1",
     "web-vitals": "^2.1.4"
   },
